--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 .cell {
-  width: 32px;
-  height: 32px;
+  width: 64px;
+  height: 64px;
 }
 
 .obstacle {
   background-color: black;
+}
+img {
+  width: 50px;
 }
