--- a/style.css
+++ b/style.css
@@ -27,3 +27,26 @@ img {
 .weapon {
   z-index: 2;
 }
+
+.flex-container {
+  display: flex;
+  gap: 10%;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
+  width: 500px;
+  height: 500px;
+  border: 3px solid rgb(9, 129, 145);
+  box-shadow: 1px 1px 1px rgb(9, 129, 145);
+  gap: 30%;
+}
+
+.container-information {
+  margin-top: 20%;
+}
+
+p {
+  font-size: 16px;
+}
